tests/ui/missing_action.stderr
error: require_access requires an `action`, e.g. #[require_access(action = "read", resource_param = "id")]
 --> tests/ui/missing_action.rs:4:1
  |
4 | async fn handler() -> &'static str {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
